--- a/feadback.html
+++ b/feadback.html
@@ -90,6 +90,9 @@
             <label for="formFileMultiple" class="form-label">Добавить файл (При необходимости):</label>
             <input class="form-control" type="file" id="formFileMultiple" multiple>
           </div>
+          <div class="mb-3">
+            <a href="recipes.html" class="btn">Отправить</a>
+          </div>
         </div>
       </div>
       <p></p>
