--- a/feadback.html
+++ b/feadback.html
@@ -76,15 +76,15 @@
         <div class="col-sm">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email адрес:</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Логин:</label>
-            <input type="login" class="form-control" id="exampleFormControlInput2">
+            <label for="exampleFormControlInput1" class="form-label">Имя:</label>
+            <input type="login" class="form-control" id="login" name="login">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Текст:</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" id="textMessage" name="textMessage" rows="3"></textarea>
           </div>
           <div class="mb-3">
             <label for="formFileMultiple" class="form-label">Добавить файл (При необходимости):</label>
