--- a/feadback.html
+++ b/feadback.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <!-- CSS only -->
+    <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <!-- JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
+  integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+  crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="main.css" />
-  <script src="./js/feadback.js"></script>
-  
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  <script src="sweetalert2.all.min.js"></script>
+  <link rel="stylesheet" href="main.css">
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
+
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
@@ -41,11 +38,13 @@
     <div><img src="https://mc.yandex.ru/watch/71438506" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
   <!-- /Yandex.Metrika counter -->
+
+  <title>Recipes</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="main.html"><img src="images/foodLove.jpg" class="logo" alt="..."></a>
+    <a class="navbar-brand" href="index.html"><img src="images/foodLove.jpg" class="logo" alt="..."></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -73,34 +72,31 @@
   <div class="container">
     <div class="rectangle">
       <p></p>
-      <p></p>
       <h3>Для нас важна обратная связь. Для того чтобы оставить отзыв, задать вопрос или предложить рецепт, заполните
         форму. Мы обязательно вам ответим!</h3>
-      <div class="row">
+      <div class="row row__reserv row-cols-1 row-cols-md-2 g-4 my-4">
         <div class="col-sm">
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email адрес:</label>
-            <input type="text" class="form-control" id="email" name="email" placeholder="name@example.com">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Имя:</label>
-            <input type="text" class="form-control" id="login" name="login">
-          </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Текст:</label>
-            <input type="text" class="form-control" id="textMessage" name="textMessage" rows="3"></textarea>
-          </div>
-          <div class="mb-3">
-            <label for="formFileMultiple" class="form-label">Добавить файл (При необходимости):</label>
-            <input class="form-control" type="file" id="formFileMultiple" multiple>
-          </div>
-          <div class="mb-3">
-            <button type="submit" class="btn btn-secondary">Отправить</button>
-          </div>
+          <form>
+            <div class="mb-3">
+              <input class="form-control" placeholder="Имя" name="login">
+            </div>
+            <div class="mb-3">
+              <input type="email" id="email" name="email" class="form-control" aria-describedby="emailHelp"
+                placeholder="Email">
+            </div>
+            <div class="mb-3">
+              <input type="text" id="text" name="text" class="form-control" placeholder="Текст сообщения">
+            </div>
+            <div class="mb-3">
+              <label for="formFileMultiple" class="form-label">Добавить файл (При необходимости):</label>
+              <input class="form-control" type="file" id="formFileMultiple" multiple>
+            </div>
+            <div class="mb-3">
+              <button class="btn btn__reserv btn-secondary" type="submit">Отправить</button>
+            </div>
+          </form>
         </div>
       </div>
-      <p></p>
-      <p></p>
     </div>
   </div>
   <nav class="navbar justify-content-center fixed-bottom navbar-expand-sm navbar-dark bg-dark">
@@ -110,6 +106,8 @@
         Использование любых материалов со страницы возможно только после письменного разрешения автора.</p>
     </div>
   </nav>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
