--- a/recipes.html
+++ b/recipes.html
@@ -129,7 +129,7 @@
     <p></p>
     <p></p>
   </div>
-  <nav class="navbar justify-content-center bottom navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar justify-content-center fixed-bottom navbar-expand-sm navbar-dark bg-dark">
     <div class="footer-text">
       <p class="text-center">По любым вопосам пишите нам на почту: name@example.com</p>
       <p class="text-center">Copyright (С) 2020 www.foodLove.com. Все права зарезервированы.
