--- a/recipe.html
+++ b/recipe.html
@@ -40,7 +40,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="main.html"><img src="images/foodLove.jpg" class="logo" alt="..."></a>
+   <a class="navbar-brand" href="index.html"><img src="images/foodLove.jpg" class="logo" alt="..."></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
